// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBar renders correctly when connected 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ [Connected] CHATLIST             [R: React] [↑↓: Navigate] [Enter: Open] [Tab: Next] [Esc: Back] │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`StatusBar renders correctly when connecting 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ [Connecting...] CHATLIST         [R: React] [↑↓: Navigate] [Enter: Open] [Tab: Next] [Esc: Back] │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`StatusBar renders correctly when disconnected 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ [Disconnected] CHATLIST          [R: React] [↑↓: Navigate] [Enter: Open] [Tab: Next] [Esc: Back] │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`StatusBar renders with different focused panels 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ [Connected] MESSAGES                 [R: React] [←: Chats] [Enter: Type] [Tab: Next] [Esc: Back] │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
